--- a/NfoRename/NfoRename.csproj
+++ b/NfoRename/NfoRename.csproj
@@ -12,15 +12,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Compile Remove="Extensions\**" />
+      <EmbeddedResource Remove="Extensions\**" />
+      <None Remove="Extensions\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Funcky" Version="3.1.0" />
         <PackageReference Include="Funcky.DiscriminatedUnion" Version="0.1.0" />
         <PackageReference Include="Spectre.Console" Version="0.43.0" />
         <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1 " />
         <PackageReference Include="System.CommandLine.NamingConventionBinder" Version="2.0.0-beta4.22272.1 " />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
